--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hazuki Liou</title>
+    <title>Portfolio</title>
 
-    <!--[if lt IE 9]>
-		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
 
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
 
     <script>
         function toggle(menu) {
@@ -63,7 +60,7 @@
 
             </div>
             <div class="company">中佑資訊有限公司</div>
-            <a href="./live.php?id=66" target="_blank" class="demobtn">尚未上線</a>
+            <a href="" target="_blank" class="demobtn">尚未上線</a>
         </div>
 
         <div class="item chungyo">
@@ -76,7 +73,7 @@
 
             </div>
             <div class="company">中佑資訊有限公司</div>
-            <a href="./live.php?id=66" target="_blank" class="demobtn">尚未上線</a>
+            <a href="" target="_blank" class="demobtn">尚未上線</a>
         </div>
 
         <div class="item mighty">
@@ -89,7 +86,7 @@
 
             </div>
             <div class="company">曼迪傳播有限公司</div>
-            <a href="./live.php?id=66" target="_blank" class="demobtn">Live Demo</a>
+            <a href="http://www.pokemon.com.tw/Movie20/" target="_blank" class="demobtn">Online</a>
         </div>
 
         <div class="item mighty">
@@ -102,7 +99,7 @@
 
             </div>
             <div class="company">曼迪傳播有限公司</div>
-            <a href="./live.php?id=66" target="_blank" class="demobtn">Live Demo</a>
+            <a href="http://www.mightymedia.com.tw/comic/2017/" target="_blank" class="demobtn">Online</a>
         </div>
 
         <div class="item mighty">
@@ -115,7 +112,7 @@
 
             </div>
             <div class="company">曼迪傳播有限公司</div>
-            <a href="./live.php?id=66" target="_blank" class="demobtn">Live Demo</a>
+            <a href="http://www.mightymedia.com.tw/conan/" target="_blank" class="demobtn">Online</a>
         </div>
 
         <div class="item mighty">
@@ -128,7 +125,7 @@
 
             </div>
             <div class="company">曼迪傳播有限公司</div>
-            <a href="./live.php?id=66" target="_blank" class="demobtn">Live Demo</a>
+            <a href="http://www.mightymedia.com.tw/anpanman/shop/" target="_blank" class="demobtn">Online</a>
         </div>
 
         <div class="item mighty">
@@ -141,7 +138,7 @@
 
             </div>
             <div class="company">曼迪傳播有限公司</div>
-            <a href="./live.php?id=66" target="_blank" class="demobtn">Live Demo</a>
+            <a href="http://www.mightymedia.com.tw/event/PF26/" target="_blank" class="demobtn">Online</a>
         </div>
 
         <div class="item mighty">
@@ -154,7 +151,7 @@
 
             </div>
             <div class="company">曼迪傳播有限公司</div>
-            <a href="./live.php?id=66" target="_blank" class="demobtn">Live Demo</a>
+            <a href="http://www.pokemon.com.tw/" target="_blank" class="demobtn">Online</a>
         </div>
 
         <div class="item mighty">
@@ -174,10 +171,8 @@
 
     </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-    <!-- scroll -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="js/mixitup.js"></script>
-
     <script src="js/mob.nav.js"></script>
 
 
